# isa-s1-iasm-dimensionality-reduction

./: README.md  iris_experiments.ipynb  pyproject.toml
.github/workflows/: ci.yml
app/: algorithms.py  app.py  param_specs.py  plots.py
dimensionality_reduction/: __main__.py  test.py
dimensionality_reduction/alghoritms/: UI_code.py  algorithms_dimensions.py  metrics.py
dimensionality_reduction/alghoritms/reduction/: base.py  lda.py  pca.py  tsne.py  umap.py
src/: main.py
src/dimensionality_reduction/alghoritms/: metrics.py
src/dimensionality_reduction/alghoritms/reduction/: __init__.py  pca.py
src/dimensionality_reduction/ui/: algorithms.py  app.py  param_specs.py  plots.py
tests/: test_setup.py  test_trustworthiness.py
tests/reduction/: test_lda.py  test_pca.py  test_tsne.py  test_umap.py
