[project]
name = "dimensionality-reduction"
version = "0.1.0"
description = "A very fun ISA project"
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100



exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]



# Might tweak later
[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "PL"
]
ignore = [
    "ANN",
    "D",
    "ARG001",
    "PLR0913",
    "PLR2004",
    "COM812",
    "ISC001",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "N806",
    "N803",
    "RUF012",
]
unfixable = ["F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

